5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1633_2921.log
== TEST (2019-04-02 18:34:10) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= jogo2 - 0.25 * jogo2
total= precodojogo1 + desconto
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto= jogo2 - 0.25 * jogo2
NameError: name 'jogo2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:36) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precodojogo1 + desconto
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= precodojogo1 + desconto
NameError: name 'precodojogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:53) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(total)

-- OUTPUT:
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:01) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(total)

-- EXECUTION TIME:
0.1785
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:42) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- OUTPUT:
66.9375
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:50) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- EXECUTION TIME:
0.134636
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:53) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- OUTPUT:
66.9375
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:36:08) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- EXECUTION TIME:
0.167219
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:17) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
print(precojogo1 + desconto)
print(desconto)


-- OUTPUT:
209.2875
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:37:29) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
print(precojogo1 + desconto)
print(desconto)


-- EXECUTION TIME:
0.157516
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
209.2875
66.9375
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
182.4825
82.49249999999999
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
166.5225
64.4025
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:27) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto)
print(desconto)
print(total)

-- ERROR:
File "XXXX", line 4
    total= precojogo1 + desconto)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:56) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- OUTPUT:
66.9375
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:03) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- OUTPUT:
66.9375
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:39:09) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- EXECUTION TIME:
0.197536
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:37) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- OUTPUT:
66.9375
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:39:44) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- EXECUTION TIME:
0.156735
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:02) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- OUTPUT:
66.9375
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:11) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- EXECUTION TIME:
0.210116
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:28) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- OUTPUT:
66.9375
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:49) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(desconto)
print(total)

-- EXECUTION TIME:
0.130422
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:10) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(round(desconto, 2)
print(total, 2)

-- ERROR:
File "XXXX", line 6
    print(total, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:31) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(round(desconto, 2)
print(round(total, 2))

-- ERROR:
File "XXXX", line 6
    print(round(total, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:58) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(round( desconto, 2)
print(round( total, 2))

-- ERROR:
File "XXXX", line 6
    print(round( total, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:25) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto
print(round( desconto, 2)
print(round( total, 2))

-- ERROR:
File "XXXX", line 6
    print(round( total, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:55) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto

print(round(desconto, 2)
print(round(total, 2))

-- ERROR:
File "XXXX", line 7
    print(round(total, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:23) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto

print(round(desconto, 2))
print(round(total, 2))

-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:38) 
-- CODE:
precojogo1= float(input("valor do primeiro jogo:"))
precojogo2= float(input("valor do segundo jogo:"))
desconto= precojogo2 - 0.25 * precojogo2
total= precojogo1 + desconto

print(round(desconto, 2))
print(round(total, 2))

-- EXECUTION TIME:
0.179676
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.52
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
